# CapriLLM

./: .gitignore  README.md  pyproject.toml
.cursor/skills/coding-standards/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_base.json
.devcontainer/docker/: Dockerfile_dev
.devcontainer/scripts/: modify_user_info.sh  post_start_command.sh  produce_image_from_container.sh  produce_image_from_dockerfile.sh
.github/: CODEOWNERS
capri_llm/config/: env_config.py
capri_llm/config/config_modules/: base_config.py  engine_config.py  logging_config.py  model_config.py  profiling_config.py  server_config.py
capri_llm/config/config_modules/test/: base_config_test.py
capri_llm/entrypoints/: api_server.py
